# surrealdb_bench

./: .gitignore  Cargo.toml  README.md
benches/: surreal_bench.rs
src/: lib.rs
