[package]
name = "surrealdb_bench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "surreal_bench"
harness = false

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
serde = {version = "1.0.156", features = ["derive"]}
tokio = { version = "1.26.0", features = ["full"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" , features = ["kv-rocksdb", "kv-mem"]}
rand = "0.8.5"
fake = "2.5.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
